--- a/assignmentlistview/build.gradle
+++ b/assignmentlistview/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -8,7 +8,6 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.assignmentlistview"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
